# qobuz-player

./: Cargo.toml  README.md  codebook.toml  flake.nix  justfile  upstream-playlist-id-fix.patch
.github/workflows/: pull-request.yml  release-linux.yml  release-macos.yml  release-windows.yml  release.yml
.helix/: languages.toml
qobuz-player-cli/: Cargo.toml
qobuz-player-cli/src/: cli.rs  lib.rs
qobuz-player-client/src/: client.rs  qobuz_models.rs
qobuz-player-client/src/qobuz_models/: album_suggestion.rs  genre.rs
qobuz-player-connect/: Cargo.toml
qobuz-player-connect/src/: lib.rs
qobuz-player-controls/: Cargo.toml
qobuz-player-controls/src/: client.rs  controls.rs  database.rs  downloader.rs  flac_source_stream.rs  lib.rs  player.rs  sink.rs  tracklist.rs
qobuz-player-gpio/src/: gpio.rs
qobuz-player-gtk/: Cargo.toml
qobuz-player-gtk/src/: lib.rs  main.rs  ui.rs
qobuz-player-gtk/src/ui/: albums_page.rs
qobuz-player-models/src/: lib.rs
qobuz-player-mpris/: Cargo.toml
qobuz-player-mpris/src/: lib.rs
qobuz-player-old/assets/: script.js
qobuz-player-old/src/routes/: now_playing.rs
qobuz-player-rfid/: Cargo.toml
qobuz-player-rfid/src/: lib.rs  main.rs
qobuz-player-state/src/: lib.rs
qobuz-player-tui/: Cargo.toml
qobuz-player-tui/src/: app.rs  discover.rs  favorites.rs  genres.rs  lib.rs  now_playing.rs  popup.rs  queue.rs  search.rs  sub_tab.rs  ui.rs  widgets.rs
qobuz-player-tui/src/widgets/: album_list.rs  album_simple_list.rs  artist_list.rs  playlist_list.rs  (+1 more)
qobuz-player-web/: Cargo.toml  dummy-index.html  package-lock.json  package.json
qobuz-player-web/assets/: styles.css  tailwind.css
qobuz-player-web/src/: app_state.rs  lib.rs  main.rs  page.rs  rfid.rs  routes.rs  views.rs
qobuz-player-web/templates/: add-track-to-playlist.html  album-tracks.html  album.html  artist-top-tracks.html  artist-tracks.html  artist.html  base.html  controls.hbs  controls.html  create-playlist.html  description.html  discover.html  error.hbs  favorites.hbs  favorites.html  genre-detail.html  head.html  info.hbs  info.html  lazy-load-component.html  list-albums-vertical.html  list-albums.html  list-artists.html  list-item.html  list-playlists-vertical.html  list-playlists.html  list-tracks.html  list.hbs  list.html  navigation.hbs  navigation.html  next.hbs  next.html  now-playing-content.html  now-playing-partial.hbs  now-playing.hbs  now-playing.html  page.hbs  play-pause.hbs  play-pause.html  (+16 more)
qobuz-player-web/templates-hbs/: error-page.hbs  info.hbs  list-item.hbs  list-tracks.hbs  navigation.hbs  page.hbs  progress.hbs  queue.hbs
rodio-test/: Cargo.toml
rodio-test/src/: main.rs
(+24 files in other folders)
