[package]
name = "qobuz-player-connect"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
qobuz-player-controls = { version = "*", path = "../qobuz-player-controls" }
qobuz-player-models = { version = "*", path = "../qobuz-player-models" }

qonductor = { git = "https://github.com/nickblt/qonductor" }
tokio.workspace = true
tracing.workspace = true
